implementacion de variables de entorno

--- a/.env
+++ b/.env
@@ -1,2 +1,9 @@
 PORT=4000
 JWT_SECRET=220716
+
+
+DB_USER= postgres  
+DB_PASSWORD= naarsee
+DB_HOST= localhost
+DB_PORT= 5432
+DB_NAME= Library    
